--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,5 +4,5 @@ compatibility_date = "2024-10-03"
 
 [[d1_databases]]
 binding = "NEWSNOW_DB"
-database_name = "newsnow-db"
-database_id = ""
+database_name = "news_now"
+database_id = "5813e619-8309-445d-bbc3-b09eb2f27122"
